Fixed spacing in navbar of profile.html

--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ p {
     color:#fff;
     font-weight: 350;
     font-size:26px;
-    padding-bottom:5px;
+    /* padding-bottom:5px; */
 }
 #h2-grey {
     color:#747474;
@@ -57,7 +57,7 @@ p {
 .checkmark-right {
     color:#fff;
     float:right;
-    padding: .7rem .75rem;
+    /* padding: .7rem .75rem; */
 }
 .cog-right {
     float:right;
